# SageOS

./: .gitignore  .gitmodules  GEMINI.md  README.md  SageOS_Book.md  benchmark_build.py  benchmark_history.json  getenv.s  implementation_plan.md  init.sh  lenovo_300e.sh  run_qemu.sh  sage  sageos.sh  setup_submodules.sh  test_hello.c  test_parse.c  test_parse2  test_parse2.c  test_parse3  test_parse3.c
docs/: README.md  README_IPC.md  boot_log.md  core_systems_architecture.md  ipc_spec.md  network_stack.md  vfs_architecture.md  wifi_driver.md
docs/arch/: arm64.md  rv64.md  x64.md
docs/architecture/: internal_apis.md  security.md  telemetry.md
docs/devices/: lenovo_300e.md  licheeRV_nano.md  (+2 more)
examples/: hello_userspace.c
sageos_build/sage_pkg/SageLang/core/: CMakeLists.txt  Kconfig  Makefile  discord_section.txt
sageos_build/sage_pkg/SageLang/core/SageChain/src/: explorer.sage  main.sage
sageos_build/sage_pkg/SageLang/core/SageFetch/: main.sage
sageos_build/sage_pkg/SageLang/core/assets/charts/: loc-metrics.json
sageos_build/sage_pkg/SageLang/core/boards/RP2040/: pico_gpio.c
sageos_build/sage_pkg/SageLang/core/boards/RP2040/PIO/: asm.sage
sageos_build/sage_pkg/SageLang/core/build_os/: BOOTX64.EFI  kernel.s  kernel_all.sage  kernel_unified.sage
sageos_build/sage_pkg/SageLang/core/build_x86_64/: kernel.elf  linker.ld
sageos_build/sage_pkg/SageLang/core/data/: cli_wallet.json
sageos_build/sage_pkg/SageLang/core/data/cli_blockchain/contracts/0xa04d7ba21042143b895a77bb1d635b783f67de23/: state.json
sageos_build/sage_pkg/SageLang/core/data/cli_blockchain/height/: 0.json  12.json  14.json  15.json  16.json  17.json  2.json  4.json  7.json
sageos_build/sage_pkg/SageLang/core/data/cli_blockchain/tx_history/: System
sageos_build/sage_pkg/SageLang/core/data/staking_test/contracts/0xa04d7ba21042143b895a77bb1d635b783f67de23/: state.json
sageos_build/sage_pkg/SageLang/core/data/staking_test/height/: 0.json  2.json  4.json  5.json
sageos_build/sage_pkg/SageLang/core/data/staking_test/tx_history/: System
sageos_build/sage_pkg/SageLang/core/data/test_blockchain_fix/height/: 2.json  3.json
sageos_build/sage_pkg/SageLang/core/docs/: sagelang-book.md
sageos_build/sage_pkg/SageLang/core/docs/meta/: ROADMAP.md  STABILITY.md  UPDATES.md
sageos_build/sage_pkg/SageLang/core/documentation/: Baremetal_OSDev_UEFI_Guide.md  Blockchain.md  Bytecode_VM_Sketch.md  Cryptography_Guide.md  Discord_Bot_Guide.md  Import_Semantics.md  ML_CUDA_Guide.md  Safety_Guide.md  SageLang_Guide.md  Vulkan_GPU_Guide.md
sageos_build/sage_pkg/SageLang/core/editors/: sage.tmLanguage.json
sageos_build/sage_pkg/SageLang/core/editors/vscode/: README.md  language-configuration.json  package-lock.json  package.json  sage-lang-0.3.0.vsix  sage-lang-0.4.0.vsix
sageos_build/sage_pkg/SageLang/core/examples/: android_hello.sage  array.sage  blockchain_db_demo.sage  blockchain_nft_demo.sage  blockchain_performance_demo.sage  blockchain_wallet_demo.sage  dict_demo.sage  doc_store.sage  ffi_point_distance.sage  fibonacci.sage  for_loop.sage  generator_scheduler.sage  generators.sage  gpu_particles.sage  gpu_phong.sage  gpu_triangle.sage  guess.sage  hello  hello.sage  logical.sage  phase6_classes.sage  return.sage  sage_agent.sage  sage_chatbot.sage  string_demo.sage  timer_test.sage
sageos_build/sage_pkg/SageLang/core/examples/shaders/: atmosphere.frag  atmosphere.vert  bloom_extract.frag  fullscreen.vert  lensing.frag  normal_map.vert  particle.comp  particle.frag  particle.vert  pbr.frag  phong.frag  phong.vert  shadow_depth.frag  shadow_depth.vert  shadow_pcf.frag  shadow_pcf.vert  skybox.frag  skybox.vert  ssao.frag  star.frag  starfield.frag  starfield.vert  text_sdf.frag  text_sdf.vert
sageos_build/sage_pkg/SageLang/core/include/: ast.h  gc.h  llvm_backend.h  module.h  pico_gpio.h  sage_thread.h
sageos_build/sage_pkg/SageLang/core/lib/: arrays.sage  json.sage  math.sage  strings.sage
sageos_build/sage_pkg/SageLang/core/lib/blockchain/: README.md
sageos_build/sage_pkg/SageLang/core/lib/llm/: attention.sage  dpo.sage  embedding.sage  gguf.sage  rag.sage  tokenizer.sage  train.sage  transformer.sage
sageos_build/sage_pkg/SageLang/core/lib/metal/: irq.sage
sageos_build/sage_pkg/SageLang/core/models/data/: collect_data.sage  download_datasets.sh
sageos_build/sage_pkg/SageLang/core/models/export/: convert.sh
sageos_build/sage_pkg/SageLang/core/models/tools/: ai_builder.sage  export_ollama.sage  inspect_model.sage
sageos_build/sage_pkg/SageLang/core/models/training/: evolve_train.sh  train_full.sage  train_sagegpt.sage  train_sl_tq_llm.sage
sageos_build/sage_pkg/SageLang/core/models/viz/: dashboard.html
sageos_build/sage_pkg/SageLang/core/output/aarch64/: sage_selfhosted
sageos_build/sage_pkg/SageLang/core/output/x86_64/: sage_selfhosted
sageos_build/sage_pkg/SageLang/core/sageos_build/: BOOTX64.EFI  kernel.s
sageos_build/sage_pkg/SageLang/core/sageos_build/backups/20260424_111228/: kernel.c.bak  uefi_loader.c.bak
sageos_build/sage_pkg/SageLang/core/sageos_build/backups/20260424_112314/: kernel.c.bak
sageos_build/sage_pkg/SageLang/core/scripts/: benchmark_runtimes.py  build_os_unified.sh.bak.20260424_105133  generate_backend_chart.py  kconfig_to_make.py  track_metrics.py
sageos_build/sage_pkg/SageLang/core/src/c/: bare_metal.c  compiler.c  constfold.c  dce.c  diagnostic.c  env.c  formatter.c  gc.c  heartbeat.c  inline.c  interpreter_excerpt.c  jit.c  kotlin_backend.c  lexer.c  linter.c  llvm_backend.c  lsp.c  lsp_main.c  main.c  module.c  net.c  parser.c  safety.c  sage_thread.c  typecheck.c  value.c
sageos_build/sage_pkg/SageLang/core/src/docker/: docker-build-sage.sh  docker-run-sage.sh  sage-build-inside.sh
sageos_build/sage_pkg/SageLang/core/src/vm/: program.c
scratch/: patch.diff  patch2.diff  patch_newlib_makefile.py  test.sage  test2.c  vfprintf.diff
scripts/: build_virt.sage  compile_to_sgvm.py  gen_virt_disk.sh  install_sys.sh  install_toolchain.sh  merge_rootfs.sh  populate_rootfs.sh
toolchain/: README.md  build_native.sh  build_toolchain.sh
(+817 files in other folders)
